# Sharpr

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT-DIARY.md  GEMINI.md  README.md  TODO.md  audit-task-list.md  optimization_plan.md  ui-ux-review.md
sharpr/: .gitignore  Cargo.toml  DEVELOPMENT.md  GEMINI.md  README.md  build.rs  test.sh
sharpr/conductor/: viewer-thumbnail-placeholder.md
sharpr/data/: collection.css  com.example.Sharpr.desktop  com.example.Sharpr.gschema.xml  com.example.Sharpr.metainfo.xml  gschemas.compiled  help-overlay.ui  io.github.hebbihebb.Sharpr.desktop  io.github.hebbihebb.Sharpr.gresource.xml  io.github.hebbihebb.Sharpr.gschema.xml  io.github.hebbihebb.Sharpr.metainfo.xml  manual.md  viewer-osd.css
sharpr/docs/: dev-log.md
sharpr/packaging/: cargo-sources.json  com.example.Sharpr.yml  io.github.hebbihebb.Sharpr.yml  sync-flatpak-source.sh
sharpr/src/: app.rs  bench.rs  jxl.rs  main.rs
sharpr/src/config/: mod.rs  settings.rs
sharpr/src/duplicates/: mod.rs  phash.rs
sharpr/src/export/: mod.rs
sharpr/src/image_pipeline/: mod.rs  worker.rs
sharpr/src/library_index/: mod.rs
sharpr/src/metadata/: exif.rs  mod.rs  orientation.rs
sharpr/src/model/: folder_node.rs  image_entry.rs  library.rs  mod.rs
sharpr/src/ops/: queue.rs
sharpr/src/quality/: backfill.rs  blur.rs  mod.rs  scorer.rs
sharpr/src/tags/: db.rs  imagenet_labels.txt  indexer.rs  mod.rs  smart.rs
sharpr/src/thumbnails/: cache.rs  mod.rs  worker.rs
sharpr/src/ui/: filmstrip.rs  filter_bar.rs  help_window.rs  image_ops.rs  metadata_chip.rs  mod.rs  ops_indicator.rs  preferences.rs  sidebar.rs  tag_browser.rs  (+3 more)
(+47 files in other folders)
