[package]
name = "sharpr"
version = "0.1.0"
edition = "2021"
description = "A modern GTK4 + Libadwaita image library and viewer"
license = "GPL-3.0-or-later"

[[bin]]
name = "sharpr"
path = "src/main.rs"

[dependencies]
tract-onnx = "0.21"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
ureq = { version = "2", features = ["tls", "json"] }
urlencoding = "2"
# GTK4 + Libadwaita UI stack
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
gdk4 = "0.9"

# Image decoding and thumbnail generation (pure Rust, thread-safe)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp", "ico"] }
jpegxl-rs = { version = "0.14.0", features = ["vendored"] }
jpegxl-sys = { version = "0.12.1", features = ["vendored"] }
webp = "0.3"
libwebp-sys = "0.9"
turbojpeg = "1.0"
memmap2 = "0.9"

# Metadata (EXIF / XMP / IPTC) via gexiv2 C library
rexiv2 = "0.10"

# Async communication between background threads and GTK main thread
async-channel = "2"

# Serialisation (config, cache)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Regex for parsing NCNN progress output
regex = "1"
dirs = "5"
rustc-hash = "1.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
itoa = "1"

[build-dependencies]
glib-build-tools = "0.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
